<resources>
    <string name="app_name">eVote</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_a_password">Esqueci a Password</string>
    <string name="password">Password</string>
    <string name="registar_aqui">Registar Aqui</string>
    <string name="bar">|</string>
    <string name="textview">TextView</string>
    <string name="icon_credits">Check , Campaigning and Election Icons made by Freepik from www.flaticon.com</string>
    <string name="sobre">Sobre</string>
    <string name="menu_noticias">Notícias</string>
    <string name="menu_candidados">Candidatos</string>
    <string name="menu_campanha">Campanha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noticias">Notícias</string>
    <string name="date">Date</string>
    <string name="votar">Votar</string>
    <string name="errorRetriveElection">Erro ao receber dados da eleição!</string>
    <string name="title_activity_candidato_detalhes">CandidatoDetalhesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="erro_dados_campanha">Erro ao receber dados da campanha!</string>
    <string name="lista_eleicoes">Lista de Eleições</string>
    <string name="list">Listas</string>
    <string name="perfil">Perfil</string>
    <string name="campanha">Campanha</string>
    <string name="detalhes">Detalhes</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="inscrito">Inscrito</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="source">Source</string>
</resources>
