<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.evote.evote.MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_evote"
        android:id="@+id/imageViewLogo"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:layout_margin="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:id="@+id/editUsername"
        android:hint="@string/username"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:layout_height="50dp"
        android:layout_below="@id/imageViewLogo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:id="@+id/editPassword"
        android:hint="@string/password"
        android:padding="5dp"
        android:layout_below="@+id/editUsername"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/entrar"
        android:layout_width="match_parent"
        android:id="@+id/buttonLogin"
        android:textColorLink="@color/colorAccent"
        android:layout_height="60dp"
        android:onClick="onButtonClick"
        android:layout_below="@id/editPassword"/>

    <LinearLayout
        android:id="@+id/smallLinksLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/registar_aqui" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/esqueci_a_password" />
    </LinearLayout>



    <TextView
        android:id="@+id/textViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="onAboutClick"
        android:text="@string/sobre" />

</RelativeLayout>




