<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:background="@color/white"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="13dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/textview"
                android:textColor="@color/colorPrimaryText" />

            <TextView
                android:id="@+id/textDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textNameView"
                android:layout_below="@+id/textNameView"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="16dp"
                android:text="@string/textview"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:id="@+id/textViewInscrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textDateView"
                android:layout_below="@+id/textDateView"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/inscrito"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageLogoView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/vote" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>